--- a/css/main.css
+++ b/css/main.css
@@ -12,9 +12,9 @@ body {
 	box-sizing: border-box;
     display: inline-flex;
     flex-flow: column wrap;
-    width: 14.75%;
-    margin: 0 1px;
-    padding: 10px;
+    min-width: 25%;
+    margin: 5px 3px;
+    padding: 15px;
 	background-image: url("../images/bg-white.jpg");
     background-size: auto;
 	box-shadow: 0 1px 2px rgba(0,0,0, 0.15),
@@ -23,30 +23,20 @@ body {
 	transition: box-shadow 0.25s ease-in-out;
 }
 
-#Note {
-	height: 110px;
-    width: 99.1%;
-	background-image: url("../images/bg-white.jpg");
-    background-size: auto;
-	resize: vertical;
-}
-
-#NotesFrame {
-	padding: 0px;
-	position: relative;
-	margin-top: -102px;
-	margin-left: -27px;
-	width: 274px;
-	height: 1000px;
-	border-style: none;
-}
-
 .Note {
-	margin-top: 0px;
 	margin-left: 4px;
 	background-image: url("../images/bg-white.jpg");
     background-size: auto;
 	text-align: left;
+}
+
+.Title {
+    font-weight: bold;
+    margin-bottom: 5px;
+}
+
+p {
+    margin: 0;
 }
 
 .block-content {
@@ -102,11 +92,6 @@ a:last-of-type {
     flex-basis: 50%;
 }
 
-a {                     /* What was this thing supposed to do? */
-    flex: 1 1 auto;
-    margin-right: 5px;
-}
-
 .block-content,
 .block {
 	opacity: 0.5;
@@ -148,17 +133,4 @@ input {
 .clear-flex {
     display: block;
     width: 100%;
-}
-
-#searchbox {
-	border: 0;
-    box-sizing: border-box;
-    margin: 0;
-    padding: 5px;
-    width: 100%;
-	background-image: url("../images/bg-white.jpg");
-    background-position: left bottom;
-    background-size: auto;
-	font-family: 'Roboto Condensed';
-	font-size: 13pt;
 }
